--- a/package.json
+++ b/package.json
@@ -9,25 +9,30 @@
   },
   "scripts": {
     "build": "tsc",
+    "start": "node --loader ts-node/esm src/index.ts",
     "prettier": "prettier --write .",
     "pretest": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
+    "argon2": "^0.40.3",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
     "koa-helmet": "^7.0.2",
     "koa-router": "^12.0.1",
+    "pg": "^8.12.0",
     "pino": "^9.3.2",
-    "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2",
+    "reflect-metadata": "^0.2.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
@@ -35,7 +40,6 @@
     "@types/koa-router": "^7.4.8",
     "@types/node": "^22.1.0",
     "@types/pino": "^7.0.5",
-    "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
@@ -45,6 +49,7 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
+    "typeorm": "^0.3.20",
     "typescript": "^5.5.4"
   }
 }
