--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
+    "@koa/bodyparser": "^5.1.1",
+    "@koa/router": "^12.0.1",
     "argon2": "^0.40.3",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
-    "koa-bodyparser": "^4.4.1",
     "koa-helmet": "^7.0.2",
-    "koa-router": "^12.0.1",
     "pg": "^8.12.0",
     "pino": "^9.3.2",
     "reflect-metadata": "^0.2.2",
@@ -37,7 +37,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa-bodyparser": "^4.3.12",
-    "@types/koa-router": "^7.4.8",
+    "@types/koa__router": "^12.0.4",
     "@types/node": "^22.1.0",
     "@types/pino": "^7.0.5",
     "@types/supertest": "^6.0.2",
