--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
     "koa-helmet": "^7.0.2",
+    "lodash": "^4.17.21",
     "pg": "^8.12.0",
     "pino": "^9.3.2",
     "reflect-metadata": "^0.2.2",
@@ -38,6 +39,7 @@
     "@types/koa": "^2.15.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa__router": "^12.0.4",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^22.1.0",
     "@types/pino": "^7.0.5",
     "@types/supertest": "^6.0.2",
